# bitjira-lifter

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml
ai/: client.py  generator.py  model_server.py
bitbucket/: cloud_helper.py
config/: default_field_config.yaml  default_field_config.yaml.example
config/ticket_overrides/: JIRA-1234.yaml  JIRA-1234.yaml.example
git/: git_utils.py
jira/: branch_helper.py
templates/: commit_template.txt  pr_template.example
templates/example/: pr_template.md
tests/: test_field_resolver.py  test_field_resolver.yaml
tests/ticket_overrides/: TEST-9999.yaml
utils/: field_resolver.py  template_engine.py
